# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.

chrome_pgo_phase = 0
pdf_is_standalone = true
is_component_build = false
is_official_build = false
is_debug = false
pdf_enable_xfa = false
pdf_enable_v8 = false
pdf_use_skia = false
pdf_use_skia_paths = false
target_cpu = "x86"